Listener cleanup - could have broken 1000 things, who knows